--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ body, html {
 
 #navTop {
 	position: fixed;
-	z-index: 100;
+	z-index: 101;
 	top: 0;
 	box-shadow: 0px 0px 500px #3e1b47;
 	height: 100px;
@@ -57,7 +57,11 @@ body, html {
 	background-size: cover;
 	box-shadow: 0px 0px 500px #3e1b47;
 	margin: auto;
+	margin-bottom: 646px;
 	border: 7px solid black;
+	position: relative;
+	z-index: 100;
+
 }
 
 #navPage .collection {
@@ -138,7 +142,9 @@ nav {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
-	margin-top: 1px;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
 
 
@@ -207,6 +213,11 @@ nav {
 	position: fixed;
 	top: 0;
 	opacity: 1;
+	z-index: 100;
+}
+
+#mainNav .brand-logo {
+	position: absolute;
 	z-index: 100;
 }
 
