--- a/static/css/style.css
+++ b/static/css/style.css
@@ -130,10 +130,18 @@ nav {
 
 #coverPage {
 	height: 50%;
+	scroll-snap-align: start;
 }
+
 
 #slide-cont {
   height: 200%;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+#slide-cont .section {
+	scroll-snap-align: start;
 }
 
 
@@ -217,7 +225,7 @@ nav {
 	position: fixed;
 	top: 0;
 	opacity: 1;
-	z-index: 100;
+	z-index: 102;
 }
 
 #mainNav .brand-logo {
