--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,22 @@ html {
   font-size: 31px;
 }
 
+#loading {
+  display: flex;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(192, 192, 192, 0.4);
+  background-image: url('./loader.png');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.page {
+  display: none;
+}
+
 #navTop {
   position: absolute;
   z-index: 102;
@@ -67,35 +83,17 @@ html {
   }
 }
 
-#coverPage {
-  max-width: 100%;
-  background-color: #181818;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: auto;
-  border-bottom: 27px solid black;
-  position: relative;
-  z-index: 101;
-}
-
-#coverPage img {
-  max-width: 100%;
-  border: 7px solid black;
-  box-shadow: 0px 0px 500px #3e1b47;
-  height: 100%;
-}
-
 #navPage .collection {
   margin: 1% auto 0px auto;
   width: 333px;
   text-align: center;
 }
 
+#navPage .valign-wrapper {
+  height: 100%;
+}
+
 @media (max-height: 1000px) {
-  /*	#coverPage img {
-		max-width: 500px;
-	}*/
   #navTop {
     height: 64px;
   }
@@ -138,21 +136,6 @@ nav {
   box-shadow: 0px 0px 500px white;
   opacity: 0.9;
   overflow: hidden;
-}
-
-#coverPage {
-  height: 40%;
-  scroll-snap-align: start;
-}
-
-#slide-cont {
-  height: 250%;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-}
-
-#slide-cont .section {
-  scroll-snap-align: start;
 }
 
 #navPage {
